--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
                 <section id="hero" class="section"></section>
                 <section id="about" class="section"></section>
                 <section id="media-gallery" class="section"></section>
+                <section id="benefits" class="section"></section>
                 <section id="social-links" class="section"></section>
             </main>
             <footer id="footer"></footer>
